[package]
name        = "src"
version     = "0.0.0"
description = "䷯ Manage your personal zoo of repositories"
authors     = ["Casey Rodarmor <casey@rodarmor.com>"]
homepage    = "https://github.com/casey/just"
license     = "CC0-1.0"
edition     = "2018"

[dependencies]
ansi_term   = "0.12.1"
dirs        = "2.0.2"
git2        = "0.9"
libc        = "0.2"
serde_yaml  = "0.8.9"
shellexpand = "1.0.0"
snafu       = "0.5.0"
structopt   = "0.3"
tempfile    = "3"
tera        = "0.11.20"
xdg         = "2.2.0"

[dependencies.serde]
version  = "1"
features = ["derive"]
