[package]
name        = "src"
version     = "0.0.5"
description = "䷯ Manage your personal zoo of repositories"
authors     = ["Casey Rodarmor <casey@rodarmor.com>"]
homepage    = "https://github.com/casey/just"
license     = "CC0-1.0"
edition     = "2018"

[dependencies]
ansi_term   = "0.12.1"
atty        = "0.2.13"
dirs        = "2.0.2"
git2        = "0.13.2"
indicatif   = "0.14.0"
libc        = "0.2.0"
rayon       = "1.2.0"
serde_yaml  = "0.8.9"
shellexpand = "2.0.0"
snafu       = "0.6.6"
structopt   = "0.3.0"
tempfile    = "3.0.0"
tera        = "1.2.0"
xdg         = "2.2.0"

[dependencies.serde]
version  = "1"
features = ["derive"]

[dev-dependencies]
tempfile = "3.1.0"
